--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.18.0",
     "react-swipeable-views": "^0.14.0",
     "react-yandex-maps": "^4.6.0",
+    "swr": "^2.2.4",
     "yup": "^1.3.2"
   },
   "devDependencies": {
