--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-swipeable-views": "^0.14.0",
     "react-yandex-maps": "^4.6.0",
     "swr": "^2.2.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.2"
   },
   "devDependencies": {
